Load spring configuration from URLs instead of file paths
Allowing xml to be loaded from any URL means we can move towards
including core configuration in the core server packages and load it
from the classpath instead of external config directories.

This core config can then be loaded by default in all configurations.

See DAQ-810 and DAQ-1124

Change-Id: I43c45b15f83bbe8efd96a1221060a17c72109ac4